--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <h2>1974-1984</h2>
             <h3>Album</h3>
         </div>
+        <div class="info">
+            <h2>Marek Wojciech Dutkiewicz / Romuald Ryszard Lipko</h2>
+            <h3>Autorzy utworu</h3>
         <div class="tekst_piosenki">
             <div class="zwrotka">
                 <p>Jolka, Jolka pamiętasz lato ze snu<br>
