--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="info">
             <h2>Budka Suflera ft. Felicjan Andrzejczak</h2>
-            <h3>Wykonawca</h3>  
+            <h3>Wykonawca</h3>
         </div>
         <div class="info">
             <h2>1974-1984</h2>
@@ -22,6 +22,7 @@
         <div class="info">
             <h2>Marek Wojciech Dutkiewicz / Romuald Ryszard Lipko</h2>
             <h3>Autorzy utworu</h3>
+        </div>
         <div class="tekst_piosenki">
             <div class="zwrotka">
                 <p>Jolka, Jolka pamiętasz lato ze snu<br>
